<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:scrollbarStyle="outsideOverlay">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_email"
                android:textColor="@color/text_label"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edit_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@drawable/bg_input_primary"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:maxLength="40"
                    android:paddingBottom="8dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="8dp"
                    android:textSize="13sp" />

                <View
                    android:layout_width="8dp"
                    android:layout_height="1dp" />


                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_check_id"
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_sub"
                    android:text="@string/term_check_email"
                    android:textColor="@color/color_white"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_name"
                android:textColor="@color/text_label"
                android:textSize="14sp" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_input_primary"
                android:hint="@string/hint_name"
                android:inputType="text"
                android:maxLength="20"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_birthday"
                android:textColor="@color/text_label"
                android:textSize="14sp" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edit_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_input_primary"
                android:hint="@string/hint_birthday"
                android:inputType="numberDecimal"
                android:maxLength="20"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_password"
                android:textColor="@color/text_label"
                android:textSize="14sp" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_input_primary"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_pw_again"
                android:textColor="@color/text_label"
                android:textSize="14sp" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edit_pw_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_input_primary"
                android:hint="@string/hint_pw_again"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:textSize="13sp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="42dp"
                android:background="@drawable/btn_primary"
                android:text="@string/term_sign_up"
                android:textColor="@color/text_primary"
                android:textSize="13sp" />
        </LinearLayout>


        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="120dp" />
    </FrameLayout>
</ScrollView>