<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.todosdialer.todosdialer.FindingPwActivity"
    tools:showIn="@layout/activity_finding_pw">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_email"
        android:textColor="@color/text_label"
        android:textSize="15sp" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="@drawable/bg_input_primary"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:maxLength="40"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        android:textSize="13sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:lineSpacingMultiplier="1.3"
        android:text="@string/msg_finding_pw_guide"
        android:textColor="@color/text_label_light"
        android:textSize="13sp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_finding"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:background="@color/color_blue_gray"
        android:text="@string/term_finding"
        android:textColor="@color/text_primary"
        android:textSize="13sp" />

</LinearLayout>
