<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:clickable="true"
    android:orientation="vertical">




    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:background="@color/color_white"
        android:clickable="true"
        android:padding="16dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            android:id="@+id/tv_dtmf_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textSize="28sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:text="1" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_dial_one"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/btn_dial"
                android:fontFamily="@font/notosans_regular"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/dial_one"
                android:textColor="@android:color/black"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/btn_dial_two"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/btn_dial"
                android:fontFamily="@font/notosans_regular"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/dial_two"
                android:textColor="@android:color/black"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/btn_dial_three"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/btn_dial"
                android:fontFamily="@font/notosans_regular"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/dial_three"
                android:textColor="@android:color/black"
                android:textSize="28sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_dial_four"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/btn_dial"
                android:fontFamily="@font/notosans_regular"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/dial_four"
                android:textColor="@android:color/black"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/btn_dial_five"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/btn_dial"
                android:fontFamily="@font/notosans_regular"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/dial_five"
                android:textColor="@android:color/black"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/btn_dial_six"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/btn_dial"
                android:fontFamily="@font/notosans_regular"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/dial_six"
                android:textColor="@android:color/black"
                android:textSize="28sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_dial_seven"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/btn_dial"
                android:fontFamily="@font/notosans_regular"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/dial_seven"
                android:textColor="@android:color/black"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/btn_dial_eight"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/btn_dial"
                android:fontFamily="@font/notosans_regular"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/dial_eight"
                android:textColor="@android:color/black"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/btn_dial_nine"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/btn_dial"
                android:fontFamily="@font/notosans_regular"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/dial_nine"
                android:textColor="@android:color/black"
                android:textSize="28sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_dial_star"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/btn_dial"
                android:fontFamily="@font/notosans_regular"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/dial_star"
                android:textColor="@android:color/black"
                android:textSize="28dp" />

            <TextView
                android:id="@+id/btn_dial_zero"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/btn_dial"
                android:fontFamily="@font/notosans_regular"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/dial_zero"
                android:textColor="@android:color/black"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/btn_dial_shop"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/btn_dial"
                android:fontFamily="@font/notosans_regular"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/dial_shop"
                android:textColor="@android:color/black"
                android:textSize="28sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_finish"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                android:src="@drawable/ic_dial_pad_drop_down_selector" />
        </TableRow>
    </TableLayout>
</RelativeLayout>